feat(profile-service): add friend ship controller (request, accept, reject, follow,...); feat(post-service): define entity post, comment, reaction; fix(post-service, profile-service): fix auth guard -> call check token from identity-service; docs(api-gateway): update api document
